--- a/index.html
+++ b/index.html
@@ -2212,7 +2212,7 @@ function updateFocusForHome(){
 <script>
   if ('serviceWorker' in navigator) {
     window.addEventListener('load', () => {
-      navigator.serviceWorker.register('/TELLPhone1/sw.js')
+      navigator.serviceWorker.register('/TELLPhone/sw.js')
         .then(registration => {
           console.log('ServiceWorker registered successfully:', registration.scope);
         })
@@ -2223,4 +2223,5 @@ function updateFocusForHome(){
   }
 </script>
 </body>
+
 </html>
