--- a/index.html
+++ b/index.html
@@ -2212,7 +2212,7 @@ function updateFocusForHome(){
 <script>
   if ('serviceWorker' in navigator) {
     window.addEventListener('load', () => {
-      navigator.serviceWorker.register('/TELLPhone/sw.js')
+      navigator.serviceWorker.register('/TELLPhone1/sw.js')
         .then(registration => {
           console.log('ServiceWorker registered successfully:', registration.scope);
         })
@@ -2225,3 +2225,4 @@ function updateFocusForHome(){
 </body>
 
 </html>
+
